<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- Necessary string values -->
    <string name="ballot_logo_description">Hand dropping card inside ballot box</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="follow">Follow Election</string>
    <string name="unfollow">Unfollow Election</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="corresponding_address">Corresponding Address</string>
    <string name="photo_of_representative">Photo of representative</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="use_my_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>
</resources>
